--- a/client/src/pages/Seats/seatsbook.scss
+++ b/client/src/pages/Seats/seatsbook.scss
@@ -98,6 +98,48 @@
             }
            }
 
+           .prices {
+            // transform: translateY(200px);
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: auto;
+            border-radius: 10px 10px 0px 0px;
+            background-color: white;
+            border: 1px solid rgb(209, 213, 217);
 
+            .content {
+                display: flex;
+                align-items: center;
+                gap: 80px;
+                .first {
+                    width: 200px;
+                    &>div:nth-child(2){
+                        color: lightslategray;
+                    }
+                }
+                button{
+                    width: 50%;
+                    padding: 10px;
+                    border: none;
+                    background-color: rgb(0, 174, 255);
+                    color: white;
+                    // font-weight: bold;
+                    font-size:1rem;
+                    cursor: pointer;
+                    border-radius:10px;
+                    transition: all 0.3s ease;
+        
+                      &:hover {
+                          background-color: rgb(149, 210, 239) 
+                      }
+                    }
+            }
+        }
     }
 }
