--- a/client/src/components/footer/footer.scss
+++ b/client/src/components/footer/footer.scss
@@ -1,5 +1,9 @@
 footer {
     background: var(--color-white);
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    box-shadow: rgba(125, 125, 126, 0.2) 0px 7px 20px 10px;
+    padding: 20px;
     .container {
         max-width: 1200px;
         margin: 0 auto;
