--- a/client/src/components/movie/movie.scss
+++ b/client/src/components/movie/movie.scss
@@ -1,8 +1,8 @@
 .movie {
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 325px;
     border-radius: 5px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(125, 125, 126, 0.2) 0px 7px 20px 10px;
     // background: red;
     // border: 1px solid black;
 
@@ -17,7 +17,9 @@
     }
 
     .bottom {
-        padding: 8px;
+        padding: 0px 10px;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
         span {
             color: lightslategrey;
         }
