--- a/client/src/components/movieFilter/moviefilter.scss
+++ b/client/src/components/movieFilter/moviefilter.scss
@@ -5,20 +5,19 @@
     margin: 10px 0px 20px 0px;
 
     .start {
-        display: flex;
-        align-items: center;
-        gap: 4px;
-        padding: 0px 2px;
+        padding: 0px 10px;
         border-right: 1px solid gray;
     }
 
     .option {
         cursor: pointer;
-        border: 1px solid lightslategray;
+        border: 1px solid rgb(202, 206, 209);
         padding: 5px;
         display: flex;
         align-items: center;
-        gap: 2px;
-        border-radius: 20px;
+        // color: gray;
+        gap: 10px;
+        border-radius: 5px;
+        padding: 5px;
     }
 }
