--- a/client/src/components/movies/movies.scss
+++ b/client/src/components/movies/movies.scss
@@ -1,6 +1,9 @@
-.movies {
+.movies {   
+     padding: 20px;
+     margin-top: 30px;
     .movies-grid {
-        margin-top: 10px;
+        // margin-top: 10px;
+    
         display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 20px;
