--- a/client/src/components/movie/movie.scss
+++ b/client/src/components/movie/movie.scss
@@ -1,18 +1,18 @@
 .movie {
-    width: 250px;
-    height: 325px;
-    border-radius: 5px;
+    width: 200px;
+    height: 270px;
+    border-radius: 10px;
     box-shadow: rgba(125, 125, 126, 0.2) 0px 7px 20px 10px;
     // background: red;
-    // border: 1px solid black;
+    border: 1px solid rgb(234, 229, 229);
 
     .top {
         img {
             width: 100%;
-            height: 100%;
+            height: 200px;
             object-fit: cover;
-            border-top-right-radius: 5px;
-            border-top-left-radius: 5px;
+            border-radius: 8px;
+            // border-top-left-radius: 5px;
         }
     }
 
