--- a/client/src/components/movieDetail/moviedetail.scss
+++ b/client/src/components/movieDetail/moviedetail.scss
@@ -68,6 +68,7 @@
             gap: 10px;
             border-left: 1px solid lightslategrey;
             padding-left: 10px;
+           
             .liked {
                 display: flex;
                 align-items: flex-start;
@@ -106,7 +107,10 @@
          display: flex;
         align-items: center;
         justify-content: space-between;
-
+        h3 {
+            text-transform: uppercase;
+            font-size: 1.5rem;
+        }
         .dates {
             display: flex;
             align-items: center;
@@ -248,6 +252,8 @@
                     display: flex;
                     flex-direction: column;
                     gap: 5px;
+                    padding: 10px;
+                    border-right: 1px solid lightgray;
 
                     .btn-group {
                         display: flex;
