--- a/client/src/components/movieFilter/moviefilter.scss
+++ b/client/src/components/movieFilter/moviefilter.scss
@@ -1,23 +1,54 @@
-.movie-filter {
+.filter {
     display: flex;
-    align-items: center;
-    gap: 20px;
-    margin: 10px 0px 20px 0px;
-
-    .start {
-        padding: 0px 10px;
-        border-right: 1px solid gray;
-    }
-
-    .option {
-        cursor: pointer;
-        border: 1px solid rgb(202, 206, 209);
-        padding: 5px;
+    flex-direction: column;
+    margin: 15px 0px;
+    .movie-filter {
+        // padding: 10px;
         display: flex;
         align-items: center;
-        // color: gray;
         gap: 10px;
-        border-radius: 5px;
-        padding: 5px;
-    }
+        // margin: 10px 0px 10px 0px;
+    
+        .start {
+            padding: 0px 10px;
+            border-right: 1px solid gray;
+        }
+    
+        .choices{
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            .select-container {
+                // margin: 20px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+    
+                .custom-select {
+                    background-color: white;
+                    padding: 10px;
+                    font-size: 0.9rem;
+                    border: 1px solid rgb(185, 187, 190);
+                    border-radius: 4px;
+                    min-width: 100px;
+                    outline: none;
+                    cursor: pointer;
+                    transition: border-color 0.3s ease;
+    
+                    /* Hover styles */
+                    &:hover {
+                      border-color: #2980b9;
+                    }
+                  
+                    /* Focus styles */
+                    &:focus {
+                      border-color: #2980b9;
+                      box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
+                    }
+                  }    
+              }
+              
+               
+        }    
+    }    
 }
