--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
     position: fixed;
     width: 100%;
+    z-index: 999999;
     top: 0;
     left: 0;
     background: var(--color-white);
