--- a/client/src/components/seats/seats.scss
+++ b/client/src/components/seats/seats.scss
@@ -26,6 +26,10 @@
                         height: 25px;
                         background-color: white;
                         border: 2px solid rgb(0, 174, 255);
+                        &.selected {
+                            /* Your styles for a selected seat */
+                            background-color: rgb(0, 174, 255);
+                          }
                     }
                 }
             }
