--- a/client/src/pages/Seats/seatsbook.scss
+++ b/client/src/pages/Seats/seatsbook.scss
@@ -2,6 +2,7 @@
     margin: 10px 0px;
     .container {
            .topbar {
+            margin-top: 70px;
             .container {
                 background-color: white;
                 padding: 20px;
