--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -35,7 +35,7 @@ body {
 font-family: "Poppins",sans-serif;
 overflow-x: hidden;
 position: relative;
-background: var(--color-light);
+background: white;
 }
 
 a {
