--- a/client/src/components/seats/seats.scss
+++ b/client/src/components/seats/seats.scss
@@ -20,16 +20,23 @@
                 grid-template-columns: repeat(21,1fr);
                 .seat {
                     div{
-                        cursor: pointer;
                         width:25px;
                         border-radius: 3px;
                         height: 25px;
                         background-color: white;
                         border: 2px solid rgb(0, 174, 255);
-                        &.selected {
-                            /* Your styles for a selected seat */
+                        cursor: pointer;
+                        
+                        &.selected {                
+                            
                             background-color: rgb(0, 174, 255);
                           }
+
+                        &.booked {
+                            border: none;
+                            pointer-events: none;
+                            background-color: rgb(120, 125, 130);;
+                        }
                     }
                 }
             }
