--- a/client/src/components/Loader/loader.scss
+++ b/client/src/components/Loader/loader.scss
@@ -1,3 +1,11 @@
+.loader-container {
+  width: 100vw;
+  min-height:200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .loader  {
     animation: rotate 1s infinite;  
     height: 50px;
