--- a/client/src/components/movieFilter/moviefilter.scss
+++ b/client/src/components/movieFilter/moviefilter.scss
@@ -4,8 +4,9 @@
     margin: 15px 0px;
     .movie-filter {
         // padding: 10px;
+        // width: 100%;
         display: flex;
-        align-items: center;
+        // align-items: flex-start;
         justify-content: space-between;
         gap: 10px;
         // margin: 10px 0px 10px 0px;
