--- a/client/src/components/movies/movies.scss
+++ b/client/src/components/movies/movies.scss
@@ -1,11 +1,20 @@
 .movies {   
+    // background-color: red;
      padding: 10px;
-     margin-top: 30px;
-    .movies-grid {
-        // margin-top: 10px;
-    
-        display: grid;
-    grid-template-columns: repeat(6,1fr);
-    gap: 20px;
-    }
+     margin-top: 50px;
+    // .container {
+    //     padding: 20px;
+    //             // max-width: 1330px;
+    //             margin: 0 auto;
+    //             display: flex;
+    //             flex-direction: column;
+    //             gap: 10px;
+        .movies-grid {
+            // margin-top: 10px;
+        
+            display: grid;
+        grid-template-columns: repeat(6,1fr);
+        gap: 20px;
+        }
+    // }
 }
