--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,11 +1,13 @@
 .home {
-    margin: 3px 0px 10px 0px;
-    .container {
-                padding: 20px;
-                max-width: 1330px;
-                margin: 0 auto;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-    }
+    margin: 3px 0px 5px 0px;
+    // background-color: blue;
+    // .container {
+        
+    //             padding: 20px;
+    //             max-width: 1330px;
+    //             margin: 0 auto;
+    //             display: flex;
+    //             flex-direction: column;
+    //             gap: 10px;
+    // }
 }
