--- a/client/src/pages/Order/order.scss
+++ b/client/src/pages/Order/order.scss
@@ -21,6 +21,7 @@
                 padding: 30px;
                 border-radius: 10px;
                 display: flex;
+                // flex-direction: column;
                 gap: 20px;
 
                 .image {
@@ -106,6 +107,44 @@
                         }
                     }
                 }
+
+                .snacks {
+                    padding: 10px;
+                    .items {
+                        margin-top: 10px;
+                        display: flex;
+                        flex-direction: column;
+                        // align-items: center;
+                        gap: 10px;
+                        .item{
+                            display: flex;
+                            gap: 10px;
+
+                            img {
+                                height: 60px;
+                                width: 80px;
+                                border-radius: 6px;
+                            }
+
+                            .item-info {
+                                display: flex;
+                                gap: 50px;
+
+                                .second {
+                                  div{
+                                    border: 2px solid rgb(74, 240, 74);
+                                  color: rgb(69, 161, 69);
+                                  font-size: 1.1rem;
+                                  padding: 2px 10px;
+                                  border-radius: 50%;
+                                  cursor: pointer;
+                                  }
+                                }
+                            }
+                        }
+                    }
+                }
+
                 .booking-second{
                     border-top: 1px solid lightgray;
                     padding-top: 10px;
