--- a/client/src/pages/Order/order.scss
+++ b/client/src/pages/Order/order.scss
@@ -38,7 +38,7 @@
                             display: flex;
                             align-items: center;
                             margin: 8px 0px;
-                            gap: 10px;
+                            gap: 5px;
                             span {
                                 padding: 0px 4px;
                                 color: rgb(164, 161, 161);
@@ -48,7 +48,7 @@
                         }
                     }
                     .theatre{
-                        margin: 20px 0px;
+                        margin: 0px 0px;
                         p {
                             color: rgb(159, 150, 150);
                             padding-bottom: 20px;
@@ -56,14 +56,18 @@
                         }
                     }
                     .timing{
+                        padding: 10px;
                         display: flex;
+                        flex-direction: column;
                         align-items: center;
-                        justify-content: space-between;
+                        // justify-content: space-between;
                         .first{
-                            display: flex;
-                            flex-direction: column;
+                            display: grid;
+                            align-self: flex-start;
+                            grid-template-columns: repeat(3,1fr);
+                            
                             p{
-                                color: rgb(159, 150, 150);
+                                // color: rgb(159, 150, 150);
                             }
                         }
                         .second{
@@ -86,13 +90,13 @@
                 border-radius: 10px;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                // justify-content: space-between;
                 
 
                 .booking-first{
                     display: flex;
                     flex-direction: column;
-                    padding-bottom: 20px;
+                    // padding-bottom: 20px;
                     border-bottom: 1px solid lightgray;
                     h3 {
                         margin-bottom: 20px;
@@ -118,6 +122,7 @@
                         gap: 10px;
                         .item{
                             display: flex;
+                            align-items: center;
                             gap: 10px;
 
                             img {
@@ -127,8 +132,8 @@
                             }
 
                             .item-info {
-                                display: flex;
-                                gap: 50px;
+                                // display: flex;
+                                // gap: 50px;
 
                                 .second {
                                   div{
@@ -140,6 +145,15 @@
                                   cursor: pointer;
                                   }
                                 }
+                            }
+
+                            button {
+                                background-color: transparent;
+                                border-radius: 3px;
+                                font-size: 1rem;
+                                padding: 4px;
+                                border: 2px solid blue;
+                                cursor: pointer;
                             }
                         }
                     }
