--- a/client/src/pages/Seats/seatsbook.scss
+++ b/client/src/pages/Seats/seatsbook.scss
@@ -16,6 +16,8 @@
                 .first{
                     display: flex;
                     align-items: center;
+                    font-weight: bold;
+                    font-size: 1.5rem;
                     gap: 20px;
 
                     .date {
